# GrokSearch

./: README.md  pyproject.toml
.claude/: settings.local.json
docs/: README_EN.md
src/grok_search/: server.py
src/smart_search/: config.py  logger.py  planning.py  server.py  sources.py  utils.py
src/smart_search/providers/: __init__.py  exa.py  grok.py
tests/: conftest.py  test_grok_provider.py  test_planning.py  test_sources.py
