[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-search"
version = "0.3.0"
description = "MCP server for multi-source intelligent search (Grok + Exa + Tavily + Firecrawl)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx[socks]>=0.28.0",
    "mcp[cli]>=1.21.2",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
smart-search = "smart_search.server:main"
grok-search = "smart_search.server:main"
